--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -1,67 +1,25 @@
 .app-touch-main {
     flex: 0 0 100%;
-    overflow: hidden;
-    background-color: $white;
-    position: absolute;
     width: 100%;
+    position: absolute;
     height: 100%;
     overflow: hidden;
+    background-color: #fff;
 
     &__scroll {
-        position: relative;
-        width: 120%;
+        width: 107%;
         height: 100%;
         overflow-y: auto;
         overflow-x: hidden;
-        padding-right: 20%;
+        padding-right: 07%;
     }
 
     &__section {
-
-        &_screen {
-            width: 100%;
-            height: 46vh;
-            padding: 0 1rem;
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            z-index: 1;
-
-            display: none;
-        }
-
         &_goods {
             width: 100%;
-            padding: 2rem 1rem 1rem 1rem;
+            padding: 1rem;
+            padding-top: 0;
         }
-    }
-
-    &__parallax {
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        height: 70%;
-        width: 100%;
-        background-image: url('https://images.unsplash.com/photo-1504114133367-631ecd3db3ca?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1944&q=80');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        z-index: 2;
-    }
-
-    &__look {
-        width: 100%;
-        height: 10rem;
-        background-color: #FAF5F1;
-        border-radius: 1rem;
-        box-shadow: 0 .05rem .1rem #ccc;
-        z-index: 3;
-        overflow: hidden;
-        padding: 2rem;
-        font-family: 'Yeseva One', cursive;
     }
 
     &__goods {}
@@ -71,21 +29,44 @@
         &__see-all {
             display: flex;
             justify-content: flex-end;
-            padding-top: 1rem;
 
-            & span {
-                font-size: 0.8rem;
-                text-transform: uppercase;
-                font-weight: 700;
-                color: #999;
+            & #see-all-goods {
+                font-size: 1rem;
+                font-weight: 600;
+                color: #403777;
+                padding: 1rem 0;
             }
         }
 
         &__wrap-scroll {
+            max-height: 28.75rem;
+            overflow: hidden;
             margin: 0 -1rem;
-            // overflow: hidden;
-            height: 32rem;
-            padding-top: 1rem;
+            position: relative;
+
+            &:after {
+                content: 'loading';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: #fff;
+                opacity: 0;
+                visibility: hidden;
+                z-index: 99;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                transition: all .3s ease 0s;
+            }
+
+            &.expectation:after {
+                opacity: 1;
+                visibility: visible;
+            }
         }
 
         &__scroll {
@@ -93,20 +74,21 @@
             flex-wrap: nowrap;
             overflow-y: hidden;
             overflow-x: auto;
-            height: 40rem;
-            padding: 0 1rem;
-            // border: 1px solid green;
-
-
+            height: 30rem;
+            padding: 1rem;
+            padding-top: 0;
 
             & .good {
                 width: 15.7rem;
                 flex: 0 0 15.7rem;
-                min-height: 10px;
+                max-height: 27.6rem;
                 margin-right: .5rem;
                 position: relative;
                 z-index: 10;
                 // border: 1px solid red;
+                // box-shadow: 0 .1rem .1rem #ccc;
+                // border-radius: 1rem;
+                // overflow: hidden;
 
                 &:last-of-type {
                     margin-right: 0;
@@ -125,6 +107,17 @@
                     border-radius: 1rem;
                     overflow: hidden;
                     // border: 1px solid blue;
+
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background-color: rgba(0, 0, 0, .1);
+                        z-index: 3;
+                    }
                 }
 
                 &__img {
@@ -135,33 +128,64 @@
                     height: 100%;
                     object-fit: cover;
                     z-index: 2;
+                    opacity: 0;
+                    transition: all .3s ease .1s;
+
+                    &.active {
+                        opacity: 1;
+                    }
                 }
 
                 &__time {
                     position: absolute;
                     right: 1rem;
                     bottom: 1rem;
-                    z-index: 3;
+                    z-index: 4;
                     color: #fff;
                 }
 
                 &__wrap-text {
                     width: 100%;
-                    // height: 6rem;
+                    height: 5.9rem;
                     position: relative;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
                     // border: 1px solid red;
                 }
 
                 &__name {
-                    font-size: .9rem;
-                    margin-top: 1rem;
-                    font-weight: 500;
-                    // border: 1px solid red;
+                    padding: 1rem 0;
+                    padding-left: .1rem;
+                    font-size: 1rem;
+                    font-weight: 600;
+                }
+
+                &__choose {
+                    display: inline-flex;
+                    justify-content: center;
+                    align-items: center;
+                    border: .05rem solid #ccc;
+                    border-radius: 1rem;
+                    padding: .5rem;
+                    font-size: .8rem;
+                    font-weight: 400;
+                    color: #999;
+                    background-color: #fff;
+                    transition: all .2s ease 0s;
+
+                    &.active {
+                        background-color: #403777;
+                        border-color: transparent;
+                        color: #fff;
+                    }
                 }
             }
         }
+    }
+}
+
+@keyframes loading {
+    0% {}
+
+    100% {
+        transform: translate(-50%, -50%) rotate(360deg);
     }
 }
