--- a/styles/_app.scss
+++ b/styles/_app.scss
@@ -4,8 +4,11 @@ body {
 }
 
 .app {
+    overflow: hidden;
+    min-height: 100%;
+
     * {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Nunito', sans-serif;
         font-weight: 600;
         font-style: normal;
     }
@@ -22,16 +25,12 @@ body {
     }
 
     &-touch {
-        position: fixed;
-        top: 0;
-        left: 0;
+        position: absolute;
         width: 100%;
         height: 100%;
+        top: 0;
+        left: 0;
         display: flex;
-        justify-content: center;
-        align-items: center;
         flex-direction: column;
-        background-color: $black;
-        overflow: hidden;
     }
 }
