--- a/styles/components/_back.scss
+++ b/styles/components/_back.scss
@@ -1,14 +1,27 @@
 .app-touch-back {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
     width: 100%;
+    height: 4rem;
     background-color: #fff;
 
     &__wrap {
         width: 100%;
+        height: 100%;
         display: flex;
-        padding: 1rem;
+        align-items: center;
+        padding: 0 1rem;
     }
 
-    &__icon {}
+    &__icon {
+        margin-right: 1rem;
+        margin-bottom: .1rem;
+    }
 
-    &__title {}
+    &__title {
+        font-size: 1.1rem;
+        color: #000;
+    }
 }
