--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -1,11 +1,10 @@
 .app-touch-form {
     flex: 0 0 100%;
-    overflow: hidden;
-    background-color: transparent;
-    position: absolute;
     width: 100%;
+    position: absolute;
     height: 100%;
     overflow: hidden;
+    background-color: transparent;
 
     opacity: 0;
     visibility: hidden;
@@ -49,7 +48,11 @@
         transition: transform .3s ease 0s;
 
         &.active {
-            transform: none;
+            transform: translateY(0%);
+        }
+
+        &.swipe {
+            transform: translateY(20%);
         }
     }
 
@@ -60,7 +63,8 @@
 
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 3rem 1fr 3rem;
+        // grid-template-rows: 3rem 1fr 3rem;
+        grid-template-rows: 6rem auto 1fr 3rem;
 
         &__name-submit,
         &__ingredients-submit {
@@ -71,17 +75,48 @@
             height: 0;
         }
 
+        &__good {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            display: grid;
+            grid-template-columns: 6rem 1fr;
+            grid-gap: 1rem;
+
+            &-img {
+                width: 100%;
+                height: 100%;
+                border-radius: 1rem;
+                overflow: hidden;
+
+                & img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            &-wrap {}
+
+            &-name {}
+
+            &-time {
+                margin-top: .5rem;
+                font-size: 0.9rem;
+                color: #999;
+            }
+        }
+
         &__title {
             width: 100%;
             height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             position: relative;
             background-color: #fff;
+            padding: 2rem 0 1rem .1rem;
 
             & h2 {
-                font-size: 1.1rem;
+                font-size: 1.2rem;
+                font-weight: 600;
             }
         }
 
@@ -100,7 +135,7 @@
 
                 &.active .form__ingredient-chec {
                     border: .4rem solid #fff;
-                    background-color: #000;
+                    background-color: #403777;
                 }
 
                 &.nothing {
@@ -111,11 +146,15 @@
             &-chec {
                 width: 1.4rem;
                 height: 1.4rem;
-                border: .05rem solid #ccc;
+                border: .05rem solid rgb(226, 226, 226);
                 background-color: #fff;
                 border-radius: 50%;
                 margin-right: .5rem;
                 transition: all .2s ease 0s;
+            }
+
+            &-name {
+                font-weight: 400;
             }
         }
 
