--- a/styles/components/_goods.scss
+++ b/styles/components/_goods.scss
@@ -1,13 +1,10 @@
 .app-touch-good {
     flex: 0 0 100%;
-    overflow: hidden;
-    background-color: $white;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
+    position: absolute;
     height: 100%;
     overflow: hidden;
+    background-color: #fff;
 
     opacity: 0;
     visibility: hidden;
@@ -19,20 +16,23 @@
     }
 
     &__scroll {
-        position: relative;
-        width: 120%;
+        width: 107%;
         height: 100%;
         overflow-y: auto;
         overflow-x: hidden;
-        padding-right: 20%;
+        padding-right: 07%;
     }
 
     &__categories {
+        position: fixed;
+        top: 4rem;
+        left: 0;
+        z-index: 10;
         width: 100%;
-        box-shadow: 0 .1rem .1rem #f2f2f2;
-        height: 3rem;
+        height: 3.5rem;
         overflow: hidden;
         background-color: #fff;
+        border-bottom: .1rem solid #f2f2f2;
 
         &-scroll {
             display: flex;
@@ -44,22 +44,71 @@
 
         &-el {
             flex: 0 0 auto;
-            height: 3rem;
+            height: 3.4rem;
             padding: 0 1rem;
-            border-bottom: .1rem solid transparent;
             display: flex;
             align-items: center;
+            position: relative;
+
+            & span {
+                color: #000;
+                font-weight: 400;
+                font-size: 1rem;
+                transition: all .5s ease 0s;
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                right: 0;
+                bottom: 0;
+                width: 0%;
+                height: .1rem;
+                background-color: #402eb6;
+                transition: all .4s ease 0s;
+            }
 
             &.active {
-                border-color: #000;
+                & span {
+                    color: #402eb6;
+                }
+
+                &::after {
+                    left: 0;
+                    width: 100%;
+                }
             }
         }
     }
 
     &__goods {
         width: 100%;
-        padding: 1rem;
-        padding-top: 7rem;
+        padding: 9rem 1rem 2rem 1rem;
+        position: relative;
+
+        &:after {
+            content: 'loading';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+            opacity: 0;
+            visibility: hidden;
+            z-index: 99;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            transition: all .3s ease 0s;
+        }
+
+        &.expectation:after {
+            opacity: 1;
+            visibility: visible;
+        }
 
         &-wrap {
             width: 100%;
@@ -72,15 +121,43 @@
     & .good {
         width: 100%;
         border-radius: 1rem;
-        overflow: hidden;
-        box-shadow: 0 0.05rem 0.1rem #ccc;
         height: auto;
+        overflow: hidden;
 
-        &__content {}
+        &.hide {
+            display: none;
+        }
+
+        &.show {
+            animation-name: show;
+            animation-duration: .5s;
+            animation-iteration-count: 1;
+            animation-direction: normal;
+            animation-timing-function: ease;
+            animation-fill-mode: forwards;
+            animation-delay: 0s;
+        }
+
+        &__content {
+            overflow: hidden;
+        }
 
         &__wrap-img {
             position: relative;
             padding-bottom: 125%;
+            border-radius: 1rem;
+            overflow: hidden;
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, .1);
+                z-index: 3;
+            }
         }
 
         &__img {
@@ -90,34 +167,63 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            z-index: 2;
+            opacity: 0;
+            transition: all .3s ease .1s;
+
+            &.active {
+                opacity: 1;
+            }
         }
 
-        &__time {}
+        &__time {
+            position: absolute;
+            right: .5rem;
+            bottom: .5rem;
+            z-index: 4;
+            color: #fff;
+        }
 
         &__wrap-text {
-            padding: 1rem .5rem;
+            padding: 1rem .1rem;
         }
 
         &__name {
-            font-size: .9rem;
+            font-size: 1rem;
+            font-weight: 600;
+            margin-bottom: 1rem;
+        }
+
+        &__choose {
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            border: .05rem solid #ccc;
+            border-radius: 1rem;
+            padding: .5rem;
+            font-size: .8rem;
+            font-weight: 400;
+            color: #999;
+            background-color: #fff;
+            transition: all .2s ease 0s;
+
+            &.active {
+                background-color: #403777;
+                border-color: transparent;
+                color: #fff;
+            }
         }
     }
 }
 
-.app-touch-good {
-    & .app-touch-back {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 10;
+@keyframes show {
+    0% {
+        display: block;
+        transform: scale(.4);
     }
 
-    &__categories {
-        position: fixed;
-        top: 3rem;
-        left: 0;
-        width: 100%;
-        z-index: 10;
+    100% {
+        display: block;
+        transform: scale(1);
     }
 }
