--- a/styles/settings/_null.scss
+++ b/styles/settings/_null.scss
@@ -30,12 +30,12 @@ footer {
 
 html,
 body {
-    height: 100%;
     width: 100%;
-    font-size: 100%;
+    height: 100%;
+    // font-size: 100%;
     line-height: 1;
     font-size: 16px;
-    text-size-adjust: 100%;
+    // text-size-adjust: 100%;
 }
 
 input,
